--- a/FundooWeb/src/app/Components/registration/registration.component.html
+++ b/FundooWeb/src/app/Components/registration/registration.component.html
@@ -1,1 +1,10 @@
 <p>registration works!</p>
+<div class="medium-list " fxLayoutAlign="center center">
+
+    <mat-card style="width:600px; box-shadow: 1px 2px 4px 2px; opacity: 0.8;">
+        <mat-card-title class="row threed"
+            style="align-content:center; font-style: unset;font-size: 60vp;background-color: rgb(241, 234, 234); font-variant: normal; text-align: center;text-transform: capitalize;text-decoration-style: wavy;">
+            <h2>Fundoo Notes</h2>
+        </mat-card-title>
+
+       
