[pradeep] wriiten html and css for registraion and login forms

--- a/FundooWeb/src/app/Components/login/login.component.html
+++ b/FundooWeb/src/app/Components/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<div class ="header">
+    <H2 class="heading">Fundoo Notes</H2>
+    </div>
+    <mat-card class="loginmatcard">
+      
+        <mat-form-field class="label1">
+            <mat-label class="label2">Email:</mat-label>
+            <input matInput>
+        </mat-form-field><br>
+    
+             
+    
+        <mat-form-field class="label1">
+            <mat-label class="label2">Password:</mat-label>
+            <input matInput type="password">
+        </mat-form-field>
+        <button mat-button color="primary" class="subbmit">Login</button>
+        <a mat-button routerLink="/registration">Register</a>
+    </mat-card>
+    
+           
+    
