--- a/FundooWeb/src/app/Components/login/login.component.scss
+++ b/FundooWeb/src/app/Components/login/login.component.scss
@@ -1,32 +1,41 @@
-.header{
-    width: 100%;
-    height:70px;
-    background-color: skyblue;
-  }
-  .heading{
-    text-align: center;
-    font-size: 2em;
-    padding-top: 0.6em;
-  }
-  .loginmatcard
-  {
-    width: 25%;
-    height: 15em;
-    background-color: skyblue;
-    margin-top: 2em;
-    margin-left: 35em;
-    border-radius: 2em;
-    box-shadow: 2px 5px 7px 1px;
-  }
-  .label1{
+
+   .label1{
   margin-left: 5em;
   
   
   }
-  .label2{
-    font-size: 18px;
-  }
+  
   .subbmit{
     background-color: whitesmoke;
     margin-left: 55px;
   }
+
+.login{
+ margin: 0;
+ height: 100vh;
+  align-content: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  flex-flow: wrap;
+
+  
+}
+.content{
+  border-radius: 2em;
+  box-shadow:2px,6px,7px,1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  width:50vh;
+}
+.h2{
+font-size: 30px;
+margin-left: 80%;
+margin-top: 50%;
+font-family: sans-serif;
+}
+.border{
+  border-style: outset;
+}
