--- a/FundooWeb/src/app/Components/registration/registration.component.html
+++ b/FundooWeb/src/app/Components/registration/registration.component.html
@@ -1,27 +1,47 @@
-<div class ="header">
-<H2 class="heading">Fundoo Notes</H2>
-</div>
-<mat-card class="regimatcard">
-    <mat-form-field class="label1">
-        <mat-label class="label2">Name:</mat-label>
-        <input matInput>
-    </mat-form-field><br>
-    <mat-form-field class="label1">
-        <mat-label class="label2">Email:</mat-label>
-        <input matInput>
-    </mat-form-field><br>
+<div class="registeration" >
+  <mat-card class="border">
+    <mat-card-header>
+     <div mat-card-avatar  ></div>
+      <mat-card-title >
+        <h2 >Registration</h2>
+      </mat-card-title>
+    </mat-card-header>
+    <div class="content" >
+      <mat-card-content >
 
-         <mat-form-field class="label1">
-        <mat-label class="label2">MobileNumber:</mat-label>
-        <input matInput>
-    </mat-form-field><br>
+            <div>
+                <mat-form-field appearance="outline">
+                    <input matInput placeholder="Name" type="text"  [formControl]="Name" >
+                    <mat-error  *ngIf="Name.invalid">{{errorNameMessage()}}</mat-error>
+                </mat-form-field>
+              </div>
 
-    <mat-form-field class="label1">
-        <mat-label class="label2">Password:</mat-label>
-        <input matInput type="password">
-    </mat-form-field>
-    <button mat-button color="primary" class="subbmit">Submit</button>
-    <a mat-button routerLink="/login">Alerday registered</a>
-</mat-card>
 
+              <div>
+                <mat-form-field appearance="outline" >
+                    <input matInput placeholder="Email" type="email"  [formControl]="email" >
+                    <mat-error  *ngIf="email.invalid">{{errorEmailMessage()}}</mat-error>
+                </mat-form-field>
+              </div>
+              
+          <div>
+              <mat-form-field appearance="outline" >
+                <input matInput placeholder="Phone Number" type="text"  [formControl]="phoneNumber">
+                <mat-error  *ngIf="phoneNumber.invalid">{{errorPhoneNumberMessage()}}</mat-error>
+              </mat-form-field>
+         </div>
+
+            <div>
+                <mat-form-field appearance="outline">
+                  <input matInput placeholder="Password" type="password"  [formControl]="password">
+                  <mat-error  *ngIf="password.invalid">{{errorPasswordMessage()}}</mat-error>
+                </mat-form-field>
+          </div>
+              
        
+    <button mat-button class="subbmit">Submit</button>
+  <a mat-button routerLink="/login" class="a">Already registered</a>
+</mat-card-content>
+</div>
+</mat-card>
+</div>   
