--- a/FundooWeb/src/app/Components/registration/registration.component.scss
+++ b/FundooWeb/src/app/Components/registration/registration.component.scss
@@ -1,32 +1,31 @@
-.header{
-  width: 100%;
-  height:70px;
-  background-color: skyblue;
+
+.registeration{
+  margin: 0;
+  height: 100vh;
+   align-content: center;
+   display: flex;
+   flex-direction: column;
+   justify-content: space-around;
+   flex-flow: wrap;
+  
+  
+  
 }
-.heading{
-  text-align: center;
-  font-size: 2em;
-  padding-top: 0.6em;
-}
-.regimatcard
-{
-  width: 25%;
-  height: 20em;
-  background-color: skyblue;
-  margin-top: 2em;
-  margin-left: 35em;
+ .content{
   border-radius: 2em;
-  box-shadow: 2px 5px 6px 6px;
-}
-.label1{
-margin-left: 5em;
+  box-shadow:2px,6px,7px,1px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50vh;
+  width:50vh;
+   
+ }
+  .border{
+     border-style: outset;
 
-
-}
-.label2{
-  font-size: 18px;
-}
-.subbmit{
-  background-color: whitesmoke;
-  margin-left: 55px;
-}
+  }
+  .subbmit{
+     background-color:rgb(43, 127, 223);
+     color:white;
+  }
