[pradeep] written http,user srvice and registration components

--- a/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.html
+++ b/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.html
@@ -11,13 +11,14 @@
         <mat-card-content >
             
         <mat-form-field class="label1" appearance="outline" >
+          <mat-label class="label2">Email:</mat-label> 
           <!-- <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon">home</mat-icon> -->
             <input matInput placeholder="E-mail" [formControl]="emailId" type="email"  >
             <mat-error  *ngIf="emailId.invalid">{{errorEmailMessage()}}</mat-error>
          </mat-form-field>
              
     
-        <button mat-button color="primary" class="subbmit">subbmit</button>
+        <button mat-button color="primary" class="subbmit">Submit</button>
       
     
 </mat-card-content>
