--- a/FundooWeb/src/app/Components/login/login.component.scss
+++ b/FundooWeb/src/app/Components/login/login.component.scss
@@ -1,16 +1,19 @@
 
    .label1{
-  margin-left: 5em;
-  
+     align-content: center;
+  width: 45vh;
+  margin-left: 1em;
   
   }
   
   .subbmit{
-    background-color: whitesmoke;
-    margin-left: 55px;
-  }
+    background-color:rgb(43, 127, 223);
+    color:white;
+    margin-left: 6em;
+ }
 
 .login{
+  background-image: url(../../../assets/images/background.jpg);
  margin: 0;
  height: 100vh;
   align-content: center;
