--- a/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.scss
+++ b/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.scss
@@ -1,16 +1,19 @@
 
    .label1{
-    margin-left: 5em;
+    align-content: center;
+    width: 50vh;
     
     
     }
     
     .subbmit{
-      background-color: whitesmoke;
-      margin-left: 55px;
-    }
+        background-color:rgb(43, 127, 223);
+        color:white;
+        margin-left: 7em;
+     }
   
   .forgotpassword{
+    background-image: url(../../../assets/images/background.jpg);
    margin: 0;
    height: 100vh;
     align-content: center;
@@ -18,9 +21,12 @@
     flex-direction: column;
     justify-content: space-around;
     flex-flow: wrap;
-  
-  
     
+  }
+  .border{
+    
+    width: 50vh;
+    height: 50vh;
   }
   .content{
     border-radius: 2em;
@@ -28,17 +34,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70%;
-   width:70%;
-  
-   margin-top:1em;
-   margin-left: 5em;
+    width: 50vh;
+    height: 40vh;
+    
+   
   }
   .h2{
-  font-size: 30px;
-  margin-left: 30%;
-  margin-top: 5px;
-  font-family: sans-serif;
+   font-size: 30px;
+   
+   margin-top: 5px;
+   font-family: sans-serif;
   }
   .border{
     border-style: outset;
