--- a/FundooWeb/src/app/Components/registration/registration.component.scss
+++ b/FundooWeb/src/app/Components/registration/registration.component.scss
@@ -22,7 +22,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 60vh;
+  height: 70vh;
   width:50vh;
    
  }
@@ -30,7 +30,7 @@
      border-style: outset;
 
   }
-  .subbmit{
+  .submit{
      background-color:rgb(43, 127, 223);
      color:white;
      margin-left: 4em;
