[pradeep] written integration for forgotpassword

--- a/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.html
+++ b/FundooWeb/src/app/Components/forgotpassword/forgotpassword.component.html
@@ -18,7 +18,7 @@
          </mat-form-field>
              
     
-        <button mat-button color="primary" class="subbmit">Submit</button>
+        <button mat-button color="primary" (click)="onForgotPasswordSubmit()" class="subbmit">Submit</button>
       
     
 </mat-card-content>
