--- a/FundooWeb/src/app/Components/resetpassword/resetpassword.component.html
+++ b/FundooWeb/src/app/Components/resetpassword/resetpassword.component.html
@@ -3,38 +3,30 @@
       <mat-card-header>
        <div mat-card-avatar  ></div>
         <mat-card-title >
-          <h2 class="h2">ResetrPassword</h2>
+          <h2 class="h2">ResetPassword</h2>
         </mat-card-title>
       </mat-card-header>
 
       <div class="content" >
         <mat-card-content >
-
-                
-        <mat-form-field class="label1"  appearance="outline" >
-            <!-- <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon">home</mat-icon> -->
-            <mat-label class="label2">Email:</mat-label> 
-            <input matInput placeholder="E-mail" [formControl]="emailId" type="email"  >
-              <mat-error  *ngIf="emailId.invalid">{{errorEmailMessage()}}</mat-error>
-           </mat-form-field>
             
             <mat-form-field class="label1" appearance="outline">
                 <!-- <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon">lock</mat-icon> -->
                      <mat-label class="label2"> New Password:</mat-label>
-                     <input matInput type="password" [formControl]="password">
-                     <mat-error  *ngIf="password.invalid">{{errorPasswordMessage()}}</mat-error>
-                 </mat-form-field>
+                     <input matInput type="password" [formControl]="newPassword">
+                     <mat-error  *ngIf="newPassword.invalid">{{errorPasswordMessage()}}</mat-error>
+             </mat-form-field>
              
     
          
         <mat-form-field class="label1" appearance="outline">
        <!-- <mat-icon svgIcon="thumbs-up" aria-hidden="false" aria-label="Example thumbs up SVG icon">lock</mat-icon> -->
             <mat-label class="label2">Conform Password:</mat-label>
-            <input matInput type="password" [formControl]="password">
-            <mat-error  *ngIf="password.invalid">{{errorPasswordMessage()}}</mat-error>
+            <input matInput type="password" [formControl]="conformPassword">
+            <mat-error  *ngIf="conformPassword.invalid">{{errorgetPasswordMessage()}}</mat-error>
         </mat-form-field>
         
-        <button mat-button type="submit" (click)="onResetSubmit()" class="submit">Login</button>
+        <button mat-button type="submit" type="submit" (click)="onResetSubmit()" class="submit">Submit</button>
 </mat-card-content>
 </div>
 </mat-card>
