--- a/FundooWeb/src/app/Components/dashboard/dashboard.component.scss
+++ b/FundooWeb/src/app/Components/dashboard/dashboard.component.scss
@@ -12,7 +12,14 @@ mat-sidenav-container{
   display: flex;
   width: 100%; 
   height: 100%; 
-  background-color: blue;
+}
+.upmat{
+  height: 100%; 
+  width: 100%; 
+  overflow: auto;
+}
+.matsidenav{
+  width: 20%;
 }
 mat-sidenav-content{
   justify-content: center;
@@ -26,7 +33,6 @@ mat-sidenav{
   margin-top: 0px;
   border-color: 1px whitesmoke;
   background-color:white;
- //background-color: hotpink;
   width: 355px;
   justify-content: center !important;
   background-color: transparent;
@@ -48,10 +54,25 @@ mat-sidenav{
 }
 .searchInput{
   border:none;
-  height: 25px;
+  height: 40px;
   width: 550px;
   margin-left: 10px;
+  background-color: 1px solid lightgray;
 }
-.cancel{
-
+.refresh{
+  margin-left: 40%;
+}
+.list{
+  margin-left:auto;
+}
+.setting{
+  margin-left: auto;
+}
+.apps{
+  margin-left: 15%;
+}
+.notediv{
+  margin-left: 10%;
+  margin-top: 10%;
+  
 }
