--- a/FundooWeb/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWeb/src/app/Components/createnotes/createnotes.component.scss
@@ -1,21 +1,42 @@
-.main{
+.container{
     display: flex;
     justify-content: center;
-    width: 10px;
-    margin-top: 20px;
+    width: 100%;
+    height: 80%;
+    margin-top: 5%;
     margin-bottom: 4%;
-    margin-left: 20%;
+   
 }
 .searchBar
 {
-   border:none;
-   outline:none;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 70%;
+    border:none;
+    outline:none;
+    float: left;
 }
-mat-card{
-    width: 47em;
-    border-radius: 13px;
-    padding: 0px;
+.matcard{
+    display: flex;
+    justify-content: center;
+    width: 35%;
+    border-radius: 1em;
+    height: 4%;
 }
+.icondiv{
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    width: 30%;
+    border-radius: 1em;
+    height: 4%;
+    
+}
+.matcard1{
+    height: 12em;
+    
+} 
 textarea{
     border: none;
     height: 1.2em;
@@ -30,4 +51,38 @@ input:placeholder-shown{
     font-weight: bolder;
     font-family: 'Product Sans',Arial,sans-serif;
   }
+#title::placeholder {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+}
+#desc::placeholder {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+}
+#title{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+}
+#desc{
+    font-family: 'Open Sans', sans-serif;
+    font-size: 15px;
+}
+button{
+    background-color: whitesmoke;
+    border: none;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    font-size: 16px;
+    padding: 10px;
+    margin-left: 70%;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: bold;
+    outline: none;
+  }
+  button:active{
+      background-color: gainsboro;
+  }
   
+ 
