--- a/FundooWeb/src/app/Components/createnotes/createnotes.component.scss
+++ b/FundooWeb/src/app/Components/createnotes/createnotes.component.scss
@@ -34,7 +34,11 @@
     
 }
 .matcard1{
-    height: 12em;
+    display: flex;
+    justify-content: center;
+    width: 35%;
+    border-radius: 1em;
+    height: 10em;
     
 } 
 textarea{
@@ -46,7 +50,6 @@ textarea{
     outline: none;
 }
 input:placeholder-shown{
-
     font-size: 20px;
     font-weight: bolder;
     font-family: 'Product Sans',Arial,sans-serif;
@@ -63,26 +66,35 @@ input:placeholder-shown{
     font-family: 'Open Sans', sans-serif;
     font-size: 20px;
 }
-#desc{
+#description{
     font-family: 'Open Sans', sans-serif;
     font-size: 15px;
 }
-button{
-    background-color: whitesmoke;
-    border: none;
-    color: black;
-    text-align: center;
-    text-decoration: none;
+icon{
+    padding-top: 10px;
     display: flex;
-    font-size: 16px;
-    padding: 10px;
-    margin-left: 70%;
+    flex-direction: row;
+    justify-content: space-between;
+}
+button{
+     background-color: whitesmoke;
+     border: none;
+     color: black;
+     text-align: center;
+     text-decoration: none;
+     display: flex;
+     font-size: 16px;
+     padding: 10px;
+     margin-left: 10%;
     font-family: 'Open Sans', sans-serif;
     font-weight: bold;
     outline: none;
+    margin-top: 85%;
+    padding-right: 45px;
   }
-  button:active{
-      background-color: gainsboro;
-  }
+ 
+//   button:active{
+//       background-color: gainsboro;
+//   }
   
  
