--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.html
@@ -1,6 +1,6 @@
 <p>displaynotes works!</p>
 <div class="maindiv">
-    <mat-card class="allnotes">
+    <div class="allnotes">
         <mat-card class="getnote">
             <div class="matdiv">
                 <mat-card-title></mat-card-title>
@@ -13,6 +13,6 @@
             </div>
 
         </mat-card>
-    </mat-card>
+    </div>
 
 </div>
