[pradeep] written signup button in dashboard

--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.html
@@ -31,6 +31,9 @@
           <mat-icon>apps</mat-icon>
         </button>
       </div>
+      <div class="signout">
+        <button  mat-raised-button  (click)="signout()">Sign Out</button>
+      </div>
       </mat-toolbar-row>
      </mat-toolbar>
   </div>
