--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
@@ -13,3 +13,32 @@ mat-card{
     margin-bottom: 2em;
     background-color: rgb(4, 1, 153);
 }
+.main-div {
+    display: flex;
+    position: relative;
+     flex-wrap: wrap;
+     flex-direction: row;
+     justify-content: center;
+     align-items: center;
+     z-index: 3001;
+     background-color: rgb(204, 42, 96);
+  }
+.matdiv {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: yellow;
+  }
+  mat-card-content {
+    padding-left: 0.8em;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    height: auto;
+    font-size: 22px;
+    font-weight: lighter;
+    padding-right: 0.2em;
+  }
+  mat-card-title {
+    padding-left: 0.8em;
+    height: auto;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    font-size: 28px;
+  }
