--- a/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
+++ b/FundooWebApi/src/app/Components/displaynotes/displaynotes.component.scss
@@ -4,14 +4,26 @@
     height: auto;
     width: 15em;
     padding-right: 2em;
-    background-color: red;
+//background-color: red;
+}
+.getAllNotes {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  box-sizing: border-box;
+  margin-left: 15%;
+  
+   height: auto;
+    width: auto;
+    padding-right: 2em;
+
 }
 mat-card{
     padding: 0px;
     padding-right: 0px;
     border-radius: 0.5em;
     margin-bottom: 2em;
-    background-color: rgb(4, 1, 153);
+  //  background-color: rgb(4, 1, 153);
 }
 .main-div {
     display: flex;
@@ -21,12 +33,12 @@ mat-card{
      justify-content: center;
      align-items: center;
      z-index: 3001;
-     background-color: rgb(204, 42, 96);
+    // background-color: rgb(204, 42, 96);
   }
 .matdiv {
     display: flex;
     flex-wrap: wrap;
-    background-color: yellow;
+   // background-color: yellow;
   }
   mat-card-content {
     padding-left: 0.8em;
