[pradeep]created icons for notes

--- a/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
+++ b/FundooWebApi/src/app/Components/dashboard/dashboard.component.scss
@@ -25,7 +25,7 @@ mat-sidenav-container{
 mat-sidenav-content{
   justify-content: center;
   overflow: scroll;
-  background-color: rgb(155, 151, 151);
+//background-color: rgb(155, 151, 151);
   width: 100%;
   align-content:center; 
   padding:30px;
