--- a/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
+++ b/FundooWebApi/src/app/Components/createnotes/createnotes.component.html
@@ -10,6 +10,7 @@
             <textarea id="description"   [formControl] ="descriptionFormControl" matInput type="text" class="input" placeholder="Take a note"></textarea>
             <div class="icon" >
                 <div (click)="open=!open">
+                    <app-icons ></app-icons>
                     <button mat-icon-button (click)="onSubmit()" >Close</button>
                 </div>
             </div>
